tests/compile_errors/004-main-signature.buzz
fun main() > num {
    return false;
}